about part done

--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sajib's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section >
+        <div class="half-width">
+            <h1>HELLO, I'M</h1>
+    <h1><span class="name-highlight">ROB DAVIDSON</span></h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ut sed.</p>
+
+        <a target="_blank" class="link-button" href="https://www.linkedin.com/in/sajibul-hasan-chowdhury-2a3ab3202/">HIRE ME</a>
+  
+        </div>
+        <div class="half-width">
+            <img src="images/new1.png" alt="">
+        </div>
+   
+    </section>
+    <section>
+        <div class="half-width">
+        <img src="images/new2.png" alt="">    
+        </div>
+        <div class="half-width">
+            <h2>ABOUT</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ullam quos! Maxime delectus rem deleniti consequatur nemo?</p>
+            <a target="_blank" class="link-button" href="www.facebook.com">DOWNLOAD CV</a>
+        </div>
+    </section>
+    
+
     
 </body>
 </html>
